<resources>
    <string name="app_name">Город Советов</string>
    <string name="bar_name" translatable="false"></string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string-array name="screen_array" translatable="false">
        <item>Карта</item>
        <item>Здания</item>
        <item>Производство</item>
        <item>Партия</item>
        <item>Дороги</item>

    </string-array>
    <string-array name="list_bild" translatable="false">
        <item>Сталинка</item>
        <item>Хрущевка</item>
        <item>Цементный завод</item>
        <item>Металлургический завод</item>
        <item>Двухполосная дорога</item>
    </string-array>
    <string-array name="build_stalinka" translatable="false">
        <item>@drawable/stalinkahad</item>
        <item>@drawable/stalinkahad2</item>
        <item>@drawable/stalinkahad3</item>
        <item>@drawable/stalinkahad4</item>
        <item>@drawable/stalinkabody</item>
        <item>@drawable/stalinkabody2</item>
        <item>@drawable/stalinkarotate</item>
        <item>@drawable/stalinkarotate2</item>
        <item>@drawable/stalinkarotate3</item>
        <item>@drawable/stalinkarotate4</item>
        <item>@drawable/stalinkathree</item>
        <item>@drawable/stalinkathree2</item>
        <item>@drawable/stalinkathree3</item>
        <item>@drawable/stalinkathree4</item>
        <item>@drawable/stalinkacross</item>
    </string-array>
    <string-array name="build_xrushevka" translatable="false">
        <item>@drawable/xrushevkahad</item>
        <item>@drawable/xrushevkahad2</item>
        <item>@drawable/xrushevkahad3</item>
        <item>@drawable/xrushevkahad4</item>
        <item>@drawable/xrushevkabody</item>
        <item>@drawable/xrushevkabody2</item>
        <item>@drawable/xrushevkarotate</item>
        <item>@drawable/xrushevkarotate2</item>
        <item>@drawable/xrushevkarotate3</item>
        <item>@drawable/xrushevkarotate4</item>
        <item>@drawable/xrushevkathree</item>
        <item>@drawable/xrushevkathree2</item>
        <item>@drawable/xrushevkathree3</item>
        <item>@drawable/xrushevkathree4</item>
        <item>@drawable/xrushevkacross</item>
    </string-array>
    <string-array name="concrete_build" translatable="false">
        <item>@drawable/concrete_fab_1</item>
        <item>@drawable/concrete_fab_2</item>
        <item>@drawable/concrete_fab_3</item>
        <item>@drawable/concrete_fab_4</item>
    </string-array>
    <string-array name="iron_build" translatable="false">
        <item>@drawable/iron_fab</item>
        <item>@drawable/iron_fab1</item>
        <item>@drawable/iron_fab2</item>
        <item>@drawable/iron_fab3</item>
        <item>@drawable/iron_fab4</item>
        <item>@drawable/iron_fab5</item>
        <item>@drawable/iron_fab6</item>
        <item>@drawable/iron_fab7</item>
        <item>@drawable/iron_fab8</item>
    </string-array>
    <string-array name="build_road" translatable="false">
        <item>@drawable/roadhad</item>
        <item>@drawable/roadhad2</item>
        <item>@drawable/roadhad3</item>
        <item>@drawable/roadhad4</item>
        <item>@drawable/roadbody</item>
        <item>@drawable/roadbody2</item>
        <item>@drawable/roadrotate</item>
        <item>@drawable/roadrotate2</item>
        <item>@drawable/roadrotate3</item>
        <item>@drawable/roadrotate4</item>
        <item>@drawable/roadthree</item>
        <item>@drawable/roadthree2</item>
        <item>@drawable/roadthree3</item>
        <item>@drawable/roadthree4</item>
        <item>@drawable/roadcross</item>
    </string-array>
    <string-array name="build_icp" translatable="false">
        <item>@drawable/icp_fab1</item>
        <item>@drawable/icp_fab2</item>
        <item>@drawable/icp_fab3</item>
        <item>@drawable/icp_fab4</item>
    </string-array>
    <string-array name="build_stock" translatable="false">
        <item>@drawable/stock_1</item>
        <item>@drawable/stock_2</item>
    </string-array>
    <string-array name="build_meat_plant" translatable="false">
        <item>@drawable/meat_plant1</item>
        <item>@drawable/meat_plant2</item>
        <item>@drawable/meat_plant3</item>
        <item>@drawable/meat_plant4</item>
    </string-array>
    <string-array name="build_mech_bakery" translatable="false">
        <item>@drawable/mech_bakery_1</item>
        <item>@drawable/mech_bakery_2</item>
        <item>@drawable/mech_bakery_3</item>
        <item>@drawable/mech_bakery_4</item>
    </string-array>
    <string-array name="build_town_hall" translatable="false">
        <item>@drawable/gorkom_1</item>
        <item>@drawable/gorkom_2</item>
        <item>@drawable/gorkom_3</item>
        <item>@drawable/gorkom_4</item>
        <item>@drawable/gorkom_5</item>
        <item>@drawable/gorkom_6</item>
    </string-array>
    <string-array name="build_shop" translatable="false">
        <item>@drawable/shop_1</item>
        <item>@drawable/shop_2</item>
    </string-array>
    <string-array name="build_voyluch" translatable="false">
        <item>@drawable/voyluch_1</item>
        <item>@drawable/voyluch_2</item>
        <item>@drawable/voyluch_3</item>
        <item>@drawable/voyluch_4</item>
        <item>@drawable/voyluch_5</item>
        <item>@drawable/voyluch_6</item>
        <item>@drawable/voyluch_7</item>
        <item>@drawable/voyluch_8</item>

    </string-array>
    <string-array name="build_school" translatable="false">
        <item>@drawable/school_1</item>
        <item>@drawable/school_2</item>
        <item>@drawable/school_3</item>
        <item>@drawable/school_4</item>
        <item>@drawable/school_5</item>
        <item>@drawable/school_6</item>

    </string-array>
    <string-array name="build_hospital" translatable="false">
        <item>@drawable/hospital_1</item>
        <item>@drawable/hospital_2</item>
        <item>@drawable/hospital_3</item>
    </string-array>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="yes" translatable="false">Стать врагом партии</string>
    <string name="no" translatable="false">Остаться верным коммунизму</string>
    <string name="message_text" translatable="false">Выйти из игры?</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="population" translatable="false">Population</string>
    <string name="map_power" translatable="false">Карта производства</string>
    <string name="physic_map" translatable="false">Физическая карта</string>
    <string name="add_chain" translatable="false">Добавить цепочку</string>
    <string name="date" translatable="false">Дата</string>
    <string name="money" translatable="false">Деньги</string>
    <string name="back" translatable="false">Назад</string>
    <string name="delete" translatable="false">Удалить</string>
    <string name="menu_pop" translatable="false">МЕНЮ НАСЕЛЕНИЯ</string>
    <string name="pop_name" translatable="false">Группа населения</string>
    <string name="pop_quantity" translatable="false">Кол-во людей</string>
    <string name="group_emo" translatable="false">Благосостояние</string>
    <string name="child_group_name" translatable="false">Дети</string>
    <string name="adult_group_name" translatable="false">Взрослые</string>
    <string name="pensioneer_group_name" translatable="false">Пенсионеры</string>
    <string name="build_menu" translatable="false">МЕНЮ СТРОИТЕЛЬСТВА</string>
    <string name="stock_viewr" translatable="false">ОЗОР СКЛАДА</string>
    <string name="stock_viewer" translatable="false">ОБЗОР СКЛАДА</string>
    <string name="import_resource" translatable="false">Импортировать ресурс</string>
    <string name="export_resource" translatable="false">Экспортировать ресурс</string>
    <string name="choose_res_stock" translatable="false">ВЫБЕРИТЕ РЕСУРС</string>
    <string name="ok" translatable="false">OK</string>
    <string name="get_money" translatable="false">Получить награду</string>
    <string name="no_tasks" translatable="false">Заданий нет</string>
    <string name="complete_task_text" translatable="false">Ура, товарищ! Вы выполнили пятилетку! Получите свою законную награду!</string>
    <string name="specialties" translatable="false">ОТРАСЛИ</string>
    <string name="delete_construct" translatable="false">Прекратить стройку</string>
    <string name="construct_name" translatable="false">Окно строительства</string>
    <string name="shop_viewer" translatable="false">Окно гастронома</string>
    <string name="more_data" translatable="false">Подробнее</string>
    <string name="level_life" translatable="false">Уровень жизни населения</string>
    <string name="continue_game" translatable="false">Продолжить</string>
    <string name="save_game" translatable="false">Сохранить и выйти</string>
    <string name="quit_to_menu" translatable="false">Выйти в главное меню</string>
    <string name="tasks" translatable="false">Пятилетки</string>
    <string name="title_activity_main_menu" translatable="false">MainMenuActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="new_game" translatable="false">Начать новую игру</string>
    <string name="load_game" translatable="false">Загрузить игру</string>
    <string name="credits" translatable="false">Авторы</string>
    <string name="exit" translatable="false">Выйти из игры</string>
    <string name="signin_other_error" translatable="false">There was an error during sign in.</string>
    <string name="message_sign_in" translatable="false">Sign-in to begin.</string>
    <string name="message_signed_in" translatable="false">Signed in.</string>
    <string name="saved_games_load_success" translatable="false">Loaded from Saved Games.</string>
    <string name="saved_games_load_failure" translatable="false">Failed to load from Saved Games.</string>
    <string name="saved_games_update_success" translatable="false">Saved to Saved Games.</string>
    <string name="saved_games_update_failure" translatable="false">Failed to save to Saved Games</string>
    <string name="saved_games_select_failure" translatable="false">Failed to select from Saved Games.</string>
    <string name="welcome" translatable="false">Добро пожаловать в \'Город Советов!\'</string>
    <string name="welcome_text" translatable="false">Вы - Владимир Левин, член Партии. Недавно Руководство послало Вас осваивать земли в Сибири. Вам необходимо построить новый советский город, опору нашей страны и партии тут, в суровых условиях и вечной мерзлоте. Служите нам честно и верно, выполняя все пятилетки и укладываясь в срок! Для начала пройдите обучение, изучив основы управления городом</string>
    <string name="receive_training" translatable="false">Пройти обучение</string>
    <string name="start_game" translatable="false">Начать игру</string>
    <string name="lose_name" translatable="false">Вы проиграли</string>
    <string name="lose_text" translatable="false">В связи с невыполнением пятилеток вы отстраняетесь от работы. Вас снимают с должности председателя Городского Комитета. Вами уже заинтересовалось КГБ, и вам придется ответить на пару вопросов...</string>
    <string name="lose_text_btn" translatable="false">Уйти с должности</string>
    <string name="education" translatable="false">Обучение</string>
    <string name="next" translatable="false">Далее</string>
    <string name="complete_learning" translatable="false">Завершить обучение</string>
    <string name="wiki" translatable="false">Справка</string>
    <string name="name" translatable="false">Имя</string>
    <string name="mail" translatable="false">e-mail</string>
    <string name="auto" translatable="false">Авторизация</string>
</resources>