<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_menu_margin"
    android:background="@drawable/fon1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding"

    tools:context="com.sovietcity.View.AuthorisationFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/name_padding"
        android:text="@string/auto"
        android:textSize="@dimen/name_font" />

    <EditText
        android:singleLine="true"
        android:id="@+id/auto_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="@dimen/text_font" />

    <EditText
        android:singleLine="true"

        android:id="@+id/auto_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textSize="@dimen/text_font" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/auto_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_card"
            android:background="@drawable/btn"
            android:padding="@dimen/btn_padding"
            android:text="@string/back"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/auto_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:padding="@dimen/btn_padding"
            android:text="@string/ok"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</LinearLayout>
