<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_menu_margin"
    android:background="@drawable/fon1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding"
    android:paddingTop="@dimen/padding_top"
    android:layout_marginTop="@dimen/margin_top"

    tools:context=".View.LoseFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lose_name"
        android:textSize="@dimen/name_font" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_padding"
        android:text="@string/lose_text"
        android:textSize="@dimen/text_font" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/lose_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:padding="@dimen/btn_padding"
            android:layout_marginRight="@dimen/margin_card"
            android:text="@string/lose_text_btn"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>
</LinearLayout>