<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_menu_margin"
    android:layout_weight="1"
    android:layout_marginTop="@dimen/margin_top"

    android:background="@drawable/fon1"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top"
    android:gravity="center"
    android:paddingLeft="@dimen/menu_padding"
    android:paddingRight="@dimen/menu_padding"
    android:paddingBottom="@dimen/menu_padding"
    android:paddingEnd="@dimen/menu_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/construct_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/construct_name"
            android:textSize="@dimen/name_font" />

        <androidx.recyclerview.widget.RecyclerView
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:id="@+id/construct_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="18"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:background="@drawable/btn"
            android:padding="@dimen/btn_padding"

            android:id="@+id/delete_construct"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_construct"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:background="@drawable/btn"
            android:padding="@dimen/btn_padding"

            android:id="@+id/back_construct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>
</LinearLayout>
