<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_menu_margin"
    android:background="@drawable/fon1"
    android:gravity="center"
    android:paddingTop="@dimen/padding_top"
    android:layout_marginTop="@dimen/margin_top"

    android:orientation="vertical"
    android:paddingLeft="@dimen/menu_padding"
    android:paddingRight="@dimen/menu_padding"
    android:paddingBottom="@dimen/menu_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="МЕНЮ"
        android:layout_margin="@dimen/name_padding"
        android:textSize="@dimen/name_font" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/resume_game"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_recycler_margin"
                android:background="@drawable/btn"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/continue_game"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/save_game"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_recycler_margin"
                android:background="@drawable/btn"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/save_game"

                android:textSize="@dimen/btn_text_size" />

            <Button
                android:soundEffectsEnabled="true"

                android:id="@+id/quit_to_menu_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_recycler_margin"
                android:background="@drawable/btn"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/quit_to_menu"

                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>