<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oblozhka1"

    android:id="@+id/content_frame_main"
    tools:context="com.sovietcity.View.MainMenuActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <!--<TextView-->
        <!--android:id="@+id/fullscreen_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="top|center"-->
        <!--android:keepScreenOn="true"-->
        <!--android:text="@string/app_name"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="@dimen/game_name"-->
        <!--android:textStyle="bold" />-->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/new_game_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_game"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/load_game_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/load_game"
                android:textColor="@color/white" />

<!--            <Button-->
<!--                android:id="@+id/records_button"-->
<!--                style="?metaButtonBarButtonStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/records"-->
<!--                android:textColor="@color/white" />-->
            <Button
                android:id="@+id/exit_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
