<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_menu_margin"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fon1"
    android:padding="@dimen/menu_padding"
    android:paddingTop="@dimen/padding_top"

    tools:context=".View.StockViewerFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_weight="1"
android:layout_margin="@dimen/name_padding"
        android:textSize="@dimen/name_font"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_viewer" />
    <androidx.cardview.widget.CardView
        card_view:cardBackgroundColor="@android:color/transparent"
        android:layout_weight="1"

        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mat_shop"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6" />

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mat_shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Съестные запасы"
                    android:textSize="@dimen/text_font" />
                <TextView
                    android:id="@+id/mat_shop_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_font" />
                <TextView
                    android:id="@+id/shop_working"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_font" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/btn"
            android:padding="@dimen/btn_padding"

            android:id="@+id/shop_ok"
            android:textSize="@dimen/text_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
        <Button
            android:background="@drawable/btn"
            android:padding="@dimen/btn_padding"
            android:layout_margin="@dimen/margin_card"
            android:id="@+id/shop_delete"
            android:textSize="@dimen/text_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>
